--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leder board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/a50edc7a55.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -91,7 +93,81 @@
         <!-- Latest Courses -->
         <section class="container">
             <h2 class="section-title">Latest Courses</h2>
-            
+            <div class="courses">
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3>7 typography tips 
+                            for interface design 2022</h3>
+                        <p>Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                1:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3>7 typography tips 
+                            for interface design 2022</h3>
+                        <p>Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                1:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="course">
+                    <div class="course-banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3>7 typography tips 
+                            for interface design 2022</h3>
+                        <p>Reed Krakoff</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star fill"></i>
+                                <i class="fas fa-star"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                1:30 hr
+                            </div>
+                        </div>
+                    </div>
+                </article>
+
+            </div>
         </section>
     </main>
 </body>
